--- a/index.html
+++ b/index.html
@@ -1,183 +1,369 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible"content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
-</head>
-<style>
+  </head>
+  <style>
     body {
-        margin: 0;
-        font-family: 'Muli', sans-serif;
-        background-color: #8f57fd;
+      margin: 0;
+      font-family: "Muli", sans-serif;
+      background-color: #8f57fd;
     }
     .header {
-        width: 100%;
-        height: 80px;
-        background-color: #8f57fd;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+      width: 100%;
+      height: 80px;
+      background-color: #8f57fd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
     .header__img {
-        width: 50px;
-        margin-top: 10px;
-        margin-left: 10px;
+      width: 50px;
+      margin-top: 10px;
+      margin-left: 10px;
     }
-    .header__menu{
-        margin-right: 30px;
+    .header__menu {
+      margin-right: 30px;
     }
-    .header__menu ul{
-        display: none;
-        list-style: none;
-        padding: 0;
-        position: absolute;
-        width: 100px;
-        text-align: right;
-        margin: 0 0 0 -14px;
+    .header__menu ul {
+      display: none;
+      list-style: none;
+      padding: 0;
+      position: absolute;
+      width: 100px;
+      text-align: right;
+      margin: 0 0 0 -14px;
     }
-    .header__menu:hover ul, ul:hover{
-        display: block;
+    .header__menu:hover ul,
+    ul:hover {
+      display: block;
     }
-    .header__menu li{
-        margin: 10px 0;
+    .header__menu li {
+      margin: 10px 0;
     }
-    .header__menu li a{
-        color: white;
-        text-decoration: none;
+    .header__menu li a {
+      color: white;
+      text-decoration: none;
     }
-    .header__menu li a:hover{
-        text-decoration: underline;
+    .header__menu li a:hover {
+      text-decoration: underline;
     }
-    .header__menu--profile{
-        margin-right: 8px;
-        display: flex;
-        align-items: center;
+    .header__menu--profile {
+      margin-right: 8px;
+      display: flex;
+      align-items: center;
     }
-    .header__menu--profile img{
-        margin-right: 8px;
-        width: 40px;
+    .header__menu--profile img {
+      margin-right: 8px;
+      width: 40px;
     }
-    .header__menu--profile p{
-        margin:0;
-        color: white;
+    .header__menu--profile p {
+      margin: 0;
+      color: white;
     }
-    .main{
-        height: 300px;
+    .main {
+      height: 300px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      border-radius: 0 0 40px 40px;
     }
-    .main__title{
-        color: white;
-        font-size: 25px;
+    .main__title {
+      color: white;
+      font-size: 25px;
     }
-    .input{
-        background-color: rgba(255, 255, 255, 0.1);
-        border: 2px solid white;
-        border-radius: 30px;
-        color: white;
-        font-family: 'Muli', sans-serif;
-        font-size: 16px;
-        height: 50px;
-        padding: 0 20px;
-        width: 70%;
-        outline: none;
+    .categories__title {
+      color: white;
+      font-size: 16px;
+      position: absolute;
+      padding-left: 30px;
+      width: 100%;
     }
-    ::placeholder{
-        color:white;
+    .input {
+      background-color: rgba(255, 255, 255, 0.1);
+      border: 2px solid white;
+      border-radius: 30px;
+      color: white;
+      font-family: "Muli", sans-serif;
+      font-size: 16px;
+      height: 50px;
+      padding: 0 20px;
+      width: 70%;
+      outline: none;
     }
-    .carousel{
-        width: 100%;
-        overflow: scroll;
-        padding: 30px;
-        position: relative;
+    ::placeholder {
+      color: white;
     }
-    .carousel__container{
-        white-space: nowrap;
-        margin: 70px 0;
-        padding-bottom: 10px;
+    .carousel {
+      width: 100%;
+      overflow: scroll;
+      padding: 30px;
+      position: relative;
     }
-    .carousel-item{
-        background: red;
-        width: 200px;
-        height: 250px;
-        border-radius: 20px;
-        overflow: hidden;
-        margin-right: 10px;
-        display: inline-block;
-        cursor: pointer;
-        transition: 450ms all;
-        transform-origin: center left;
-        position: relative;
+    .carousel__container {
+      transition: 450ms transform;
+      transition: 450ms -webkit-transform;
+      transition: 450ms transform, 450ms -webkit-transform;
+      white-space: nowrap;
+      margin: 70px 0;
+      padding-bottom: 10px;
+      font-size: 0;
     }
-    .carousel-item:hover ~ .carousel-item{
-        transform: translate3d(100px,0,0);
+    .carousel-item {
+      border-radius: 20px;
+      overflow: hidden;
+      position: relative;
+      display: inline-block;
+      width: 200px;
+      height: 250px;
+      margin-right: 10px;
+      font-size: 20px;
+      cursor: pointer;
+      transition: 450ms all;
+      -webkit-transform-origin: center left;
+      transform-origin: center left;
     }
-    .carousel__container:hover .carousel-item{
-        opacity: 0.3;
+    .carousel-item:hover ~ .carousel-item {
+      -webkit-transform: translate3d(100px, 0, 0);
+      transform: translate3d(100px, 0, 0);
     }
-    .carousel__container:hover .carousel-item:hover{
-        transform: scale(1.5);
-        opacity: 1;
+    .carousel__container:hover .carousel-item {
+      opacity: 0.3;
     }
-    .carousel-item__img{
-        width: 200px;
-        height: 250px;
-        object-fit: cover;
+    .carousel__container:hover .carousel-item:hover {
+      -webkit-transform: scale(1.5);
+      transform: scale(1.5);
+      opacity: 1;
     }
-    .carousel-item__details{
-        background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
-        font-size: 10px;
-        opacity: 0;
-        transition: 450ms opacity;
-        padding: 10px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+    .carousel-item__img {
+      width: 200px;
+      height: 250px;
+      -o-object-fit: cover;
+      object-fit: cover;
     }
-
-</style>
-<body>
+    .carousel-item__details {
+      background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.9) 0%,
+        rgba(0, 0, 0, 0) 100%
+      );
+      font-size: 10px;
+      opacity: 0;
+      transition: 450ms opacity;
+      padding: 10px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+    .footer {
+      display: flex;
+      align-items: center;
+      height: 100px;
+      width: 100%;
+    }
+    .footer a {
+      color: white;
+      cursor: pointer;
+      font-size: 14px;
+      padding-left: 30px;
+      text-decoration: none;
+    }
+    .footer a:hover {
+      text-decoration: underline;
+    }
+    @media only screen and (max-width: 600px) {
+      .main__description--title {
+        font-size: 30px;
+      }
+      .footer {
+        align-items: flex-start;
+        flex-direction: column;
+      }
+    }
+  </style>
+  <body>
     <header class="header">
-        <img class="header__img" src="./logo-vidflix.png"alt="">
-        <div class="header__menu">
-            <div class="header__menu--profile">
-                <img src="./user-icon.png" alt="user">
-                <p>Perfil</p>
-            </div>
-            <ul>
-                <li>
-                    <a href="/">Cuenta</a>
-                    <a href="/">Cerrar Sesión</a>
-                </li>
-            </ul>
+      <img class="header__img" src="./logo-vidflix.png" alt="" />
+      <div class="header__menu">
+        <div class="header__menu--profile">
+          <img src="./user-icon.png" alt="user" />
+          <p>Perfil</p>
         </div>
+        <ul>
+          <li>
+            <a href="/">Cuenta</a>
+            <a href="/">Cerrar Sesión</a>
+          </li>
+        </ul>
+      </div>
     </header>
+
     <section class="main">
-        <h2 class="main__title">¿Qué quieres ver hoy?</h2>
-        <input class="input" type="text" placeholder="Buscar...">
+      <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+      <input class="input" type="text" placeholder="Buscar..." />
     </section>
+
+    <h2 class="categories__title">Mi lista</h2>
     <section class="carousel">
-        <div class="carousel__container">
-            <div class="carousel-item">
-                <img class="carousel-item__img" src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Auto">
-                <div class="carousel-item__details">
-                    <div>
-                        <img src="https://img.icons8.com/flat_round/64/000000/play--v5.png" alt="play">
-                        <img src="https://img.icons8.com/flat_round/64/000000/play--v5.png">
-
-                    </div>
-                </div>
-                <p class="carousel-item__details--title">Título descriptivo</p>
-                <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+      <div class="carousel__container">
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
             </div>
-            <div class="carousel-item">
-
-            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
         </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
+            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
+            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
+            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
+            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
+            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://images.pexels.com/photos/3156482/pexels-photo-3156482.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+            alt="Auto"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+                alt="play"
+              />
+              <img
+                src="https://img.icons8.com/flat_round/64/000000/play--v5.png"
+              />
+            </div>
+          </div>
+          <p class="carousel-item__details--title">Título descriptivo</p>
+          <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+        </div>
+      </div>
     </section>
-</body>
+
+    <footer class="footer">
+      <a href="/">Términos de uso</a>
+      <a href="/">Declaración de privacidad</a>
+      <a href="/">Centro de ayuda</a>
+    </footer>
+  </body>
 </html>
