--- a/login/index.html
+++ b/login/index.html
@@ -20,7 +20,7 @@
       <img
         tabindex="0"
         class="header__img"
-        src="./logo-vidflix.png"
+        src="../logo-vidflix.png"
         alt="Vidlix"
       />
     </header>
@@ -55,11 +55,11 @@
         </form>
         <section class="login__container--social-media">
           <div>
-            <img src="./assets/google-icon.webp" alt="Google" />Inicia sesión
+            <img src="../assets/google-icon.webp" alt="Google" />Inicia sesión
             con Google
           </div>
           <div>
-            <img src="./assets/twitter-icon.webp" alt="Twitter" />Inicia sesión
+            <img src="../assets/twitter-icon.webp" alt="Twitter" />Inicia sesión
             con Twitter
           </div>
         </section>
