icon user changed

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <img class="header__img" src="./logo-vidflix.png" alt="" />
       <div class="header__menu">
         <div class="header__menu--profile">
-          <img src="./user-icon.png" alt="user" />
+          <img src="./user.png" alt="user" />
           <p>Perfil</p>
         </div>
         <ul>
